--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                       <li><a>Item 3</a></li>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost text-xl">Divine Powe</a>
+                  <a class="btn btn-ghost text-xl">Divine Power</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
@@ -51,14 +51,18 @@
                   </ul>
                 </div>
                 <div class="navbar-end">
-                  <a class="btn">Button</a>
+                  <a class="btn"></a>
                 </div>
               </div>
         </nav>
 
+
     </header>
 
     <main>
+        <div>
+            <a href="start.html">shurur kotha</a>
+        </div>
 
     </main>
 
