--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body>
+<body class="container mx-auto">
 
     <header>
 
@@ -36,7 +36,7 @@
                   <a class="btn btn-ghost text-xl">Divine Power</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                  <ul class="menu menu-horizontal px-1">
+                  <!-- <ul class="menu menu-horizontal px-1">
                     <li><a>Item 1</a></li>
                     <li>
                       <details>
@@ -48,7 +48,7 @@
                       </details>
                     </li>
                     <li><a>Item 3</a></li>
-                  </ul>
+                  </ul> -->
                 </div>
                 <div class="navbar-end">
                   <a class="btn"></a>
@@ -60,9 +60,10 @@
     </header>
 
     <main>
-        <div>
-            <a href="start.html">shurur kotha</a>
-        </div>
+      <div class="flex items-center justify-center bg-gray-500 text-white h-10 w-3/4 mx-auto rounded-xl">
+        <a href="start.html">শুরুর কথা</a>
+    </div>
+    
 
     </main>
 
