after copleting link task

--- a/index.html
+++ b/index.html
@@ -60,9 +60,29 @@
     </header>
 
     <main>
-      <div class="flex items-center justify-center bg-gray-500 text-white h-10 w-3/4 mx-auto rounded-xl">
+      <div class="flex items-center justify-center  bg-gray-500 mb-4 text-white  h-10 w-3/4 mx-auto rounded-2xl">
         <a href="start.html">শুরুর কথা</a>
     </div>
+
+    <div class="flex items-center justify-center bg-gray-500 mb-4 text-white h-10 w-3/4 mx-auto rounded-2xl">
+      <a href="start.html">সেশন সংক্রান্ত তথ্য</a>
+    </div>
+
+    <div class="flex items-center justify-center bg-gray-500 mb-4 text-white h-10 w-3/4 mx-auto rounded-2xl">
+      <a href="start.html">রুকইয়াহ এর পদ্ধতি</a>
+    </div>
+
+    <div class="flex items-center justify-center bg-gray-500 mb-4 text-white h-10 w-3/4 mx-auto rounded-2xl">
+      <a href="start.html">লক্ষণসমূহ</a>
+    </div>
+
+    <div class="flex items-center justify-center bg-gray-500 mb-4 text-white h-10 w-3/4 mx-auto rounded-2xl">
+      <a href="start.html">যোগাযোগ </a>
+    </div>
+
+
+    
+  
     
 
     </main>
