--- a/index.html
+++ b/index.html
@@ -5,78 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divine Power</title>
 
+    <!-- font for heading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+
     <!-- tailwind css and daisyUi -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.1/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+
+<style>
+  .headingFont{
+    font-family: 'Black Ops One', system-ui;
+
+  }
+  
+</style>
+
 
 </head>
 <body class="container mx-auto">
 
     <header>
 
-        <nav>   
-            <div class="navbar bg-base-100">
-                <div class="navbar-start">
-                  <div class="dropdown">
-                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-                    </div>
-                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                      <li><a>Item 1</a></li>
-                      <li>
-                        <a>Parent</a>
-                        <ul class="p-2">
-                          <li><a>Submenu 1</a></li>
-                          <li><a>Submenu 2</a></li>
-                        </ul>
-                      </li>
-                      <li><a>Item 3</a></li>
-                    </ul>
-                  </div>
-                  <a class="btn btn-ghost text-xl">Divine Power</a>
-                </div>
-                <div class="navbar-center hidden lg:flex">
-                  <!-- <ul class="menu menu-horizontal px-1">
-                    <li><a>Item 1</a></li>
-                    <li>
-                      <details>
-                        <summary>Parent</summary>
-                        <ul class="p-2">
-                          <li><a>Submenu 1</a></li>
-                          <li><a>Submenu 2</a></li>
-                        </ul>
-                      </details>
-                    </li>
-                    <li><a>Item 3</a></li>
-                  </ul> -->
-                </div>
-                <div class="navbar-end">
-                  <a class="btn"></a>
-                </div>
-              </div>
-        </nav>
+       <nav>
+        <div class="w-full h-auto bg-slate-200 text-center  mb-8 headingFont text-4xl">
+          Divine Power
+        </div>
+        
+      </nav>
 
 
     </header>
 
     <main>
-      <div class="flex items-center justify-center  bg-gray-500 mb-4 text-white  h-10 w-3/4 mx-auto rounded-2xl">
+      <div class="flex items-center justify-center  bg-gray-500 mb-5 text-white  h-10 w-3/4 mx-auto rounded-2xl">
         <a href="start.html">শুরুর কথা</a>
     </div>
 
-    <div class="flex items-center justify-center bg-gray-500 mb-4 text-white h-10 w-3/4 mx-auto rounded-2xl">
+    <div class="flex items-center justify-center bg-gray-500 mb-5 text-white h-10 w-3/4 mx-auto rounded-2xl">
       <a href="start.html">সেশন সংক্রান্ত তথ্য</a>
     </div>
 
-    <div class="flex items-center justify-center bg-gray-500 mb-4 text-white h-10 w-3/4 mx-auto rounded-2xl">
+    <div class="flex items-center justify-center bg-gray-500 mb-5 text-white h-10 w-3/4 mx-auto rounded-2xl">
       <a href="start.html">রুকইয়াহ এর পদ্ধতি</a>
     </div>
 
-    <div class="flex items-center justify-center bg-gray-500 mb-4 text-white h-10 w-3/4 mx-auto rounded-2xl">
+    <div class="flex items-center justify-center bg-gray-500 mb-5 text-white h-10 w-3/4 mx-auto rounded-2xl">
       <a href="start.html">লক্ষণসমূহ</a>
     </div>
 
-    <div class="flex items-center justify-center bg-gray-500 mb-4 text-white h-10 w-3/4 mx-auto rounded-2xl">
+    <div class="flex items-center justify-center bg-gray-500 mb-5 text-white h-10 w-3/4 mx-auto rounded-2xl">
       <a href="start.html">যোগাযোগ </a>
     </div>
 
