after adding pages

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
     </div>
 
     <div class="flex items-center justify-center bg-gray-500 mb-5 text-white h-10 w-3/4 mx-auto rounded-2xl">
-      <a href="start.html">সেশন সংক্রান্ত তথ্য</a>
+      <a href="sessionInfo.html">সেশন সংক্রান্ত তথ্য</a>
     </div>
 
     <div class="flex items-center justify-center bg-gray-500 mb-5 text-white h-10 w-3/4 mx-auto rounded-2xl">
-      <a href="start.html">রুকইয়াহ এর পদ্ধতি</a>
+      <a href="./ruqyaPoddhoti.html">রুকইয়াহ এর পদ্ধতি</a>
     </div>
 
     <div class="flex items-center justify-center bg-gray-500 mb-5 text-white h-10 w-3/4 mx-auto rounded-2xl">
-      <a href="start.html">লক্ষণসমূহ</a>
+      <a href="lokkhon.html">লক্ষণসমূহ</a>
     </div>
 
     <div class="flex items-center justify-center bg-gray-500 mb-5 text-white h-10 w-3/4 mx-auto rounded-2xl">
-      <a href="start.html">যোগাযোগ </a>
+      <a href="contact.html">যোগাযোগ </a>
     </div>
 
 
