--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divine Power</title>
 
+    <!-- Using CDN link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <!-- font for heading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,6 +71,13 @@
     </main>
 
     <footer>    
+      <a href="https://www.facebook.com/people/Divine-Power-Ruqyah-Hijama-Center/61555731561191/?ref=embed_page" class="icon-link">
+        <i class="fab fa-facebook-square"></i>
+    </a>
+
+    <a href="https://api.whatsapp.com/send?phone=+8801972136080 class="icon-link">
+      <i class="fa-brands fa-square-whatsapp"></i></i>
+  </a>
 
     </footer>
     
