--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
 
     <div class="">
 
-      <div class="flex items-center text-center justify-center bg-gray-500 mb-5 text-white h-10 w-3/4  rounded-2xl">
+      <div class="flex items-center text-center justify-center bg-black mb-5 text-white h-8 w-28 mx-auto" style="box-shadow: 0px 8px 10px blueviolet;">
         ফলো করুন
-      </div>
+    </div>
+    
       
-        <div class="flex gap-x-6 mt-2">
+        <div class="flex text-center items-center justify-center gap-x-8 mt-2 mx-auto">
           <img class="h-12 w-14" src="./images/facebook.jpg" alt="">
           <img class="h-12 w-14" src="./images/tl3.jpg" alt="">
           <img class="h-14 w-16" src="./images/whatsapp.jpg" alt="">
