--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <img class="h-12 w-14" src="./images/facebook.jpg" alt="">
           </a>
 
-          <a href="https://api.telegram.com/send?phone=+8801972136080" class="icon-link">
+          <a href="https://api.telegram.org/send?phone=+8801972136080" class="icon-link">
             <img class="h-12 w-14" src="./images/tl3.jpg" alt="">
         </a>
           
