--- a/start.html
+++ b/start.html
@@ -25,6 +25,8 @@
         
       </nav>
     
-    রুকইয়া কি?
+     <div class="w-4/5 mx-auto">
+      ইসলামে ঝাড়ফুঁক-কে রুকইয়াহ বলে। রুকইয়াহ অর্থ হলো ঝাড়ফুঁক । আর রুকইয়াহ শারইয়্যাহ মানে শরিয়াত সম্মত ঝাড়ফুঁক, কোরআনের আয়াত অথবা হাদিসে বর্ণিত দোয়া দ্বারা ঝাড়ফুঁক করা। তবে 'রুকইয়া' শব্দটি সচরাচর ঝাড়ফুঁক করা বুঝাতে ব্যবহার হয়। এই ঝাড়ফুঁক সরাসরি কারো ওপর হতে পারে, অথবা কোনো পানি বা খাদ্যের ওপর করে সেটা খাওয়া অথবা ব্যবহার করা হতে পারে। এক্ষেত্রে রুকইয়ার পানি, অথবা রুকইয়ার গোসল ইত্যাদি পরিভাষা ব্যবহার হয়।
+     </div>
 </body>
 </html>
