--- a/contact.html
+++ b/contact.html
@@ -33,17 +33,15 @@
     <h2 style="background-color: white; color: #222222;">
       <div style="text-align: left;"><span style="font-family: Galada; font-size: small;"><b
             style="background-color: transparent;"><span style="color: red;">✅&nbsp;</span></b><span
-            style="color: red;"><b>চেম্বার-১:</b>&nbsp;</span></span>&nbsp;<span style="font-size: small;">হলি
-          লাইফ</span></div>
-      <div style="text-align: left;"><span style="font-family: Galada; font-size: medium; font-weight: normal;">রেইনবো
-          স্কুল সংলগ্ন (অভিযান- ২১৬) শফিউদ্দিন রোড, কলেজ গেট, টঙ্গী, গাজীপুর ।</span></div>
+            style="color: red;"><b>চেম্বার-১:</b>&nbsp;</span></span>&nbsp;<span style="font-size: medium;">উত্তরা</span></div>
+      <div style="text-align: left;"><span style="font-family: Galada; font-size: small; font-weight: normal;">সেক্টর ৫,রোড ৯/ই,হাবিব মার্কেট,পানির পাম্প সংলগ্ন ।</span></div>
     </h2>
     <h1 style="background-color: white; color: #222222;"><span style="font-family: Galada; font-size: small;"><b
           style="background-color: transparent;"><span style="color: red;">✅&nbsp;</span></b><b><span
-            style="color: red;">চেম্বার-২ :</span><span style="color: #222222;">&nbsp;</span></b></span>&nbsp;<u
-        style="font-family: Galada; font-size: medium; font-weight: normal;">ডিভাইন পাওয়ার</u>
+            style="color: red;">চেম্বার-২ :</span><span style="color: #222222;">&nbsp;</span></b></span>&nbsp;<span
+        style="font-family: Galada; font-size: medium; font-weight: normal;">ডিভাইন পাওয়ার</span>
       <div style="background-color: white; color: #222222; text-align: left;"><span
-          style="font-family: Galada; font-size: small; font-weight: normal;">মেশিন পার (বেঙ্গল রোড), জিরানী বাজার,
+          style="font-family: Galada; font-size: small; font-weight: normal;">মেশিন পাড় (বেঙ্গল রোড), জিরানী বাজার,
           আশুলিয়া, ঢাকা ।</span></div>
     </h1>
 
